--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,6 +24,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- poppins font -->
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+  <!-- Roboto font -->
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <!-- open sans -->
+    <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
+  <!-- Quantico -->
+  <link href='https://fonts.googleapis.com/css?family=Quantico' rel='stylesheet'>
     <title>React App</title>
   </head>
   <body>
